RHEL/8.4/systemctl.list-unit-files.md
## Red Hat Enterprise Linux release 8.4 「最小限のインストール」後のUNITリスト

Red Hat Enterprise Linux release 8.4  を「ソフトウェアの選択」画面で「最小限のインストール」を選択しインストールした直後の「# systemctl list-unit-files」コマンドの結果です。

| UNIT FILE                                  | STATE     |
| ------------------------------------------ | --------- |
| proc-sys-fs-binfmt_misc.automount          | static    |
| -.mount                                    | generated |
| boot-efi.mount                             | generated |
| boot.mount                                 | generated |
| dev-hugepages.mount                        | static    |
| dev-mqueue.mount                           | static    |
| proc-sys-fs-binfmt_misc.mount              | static    |
| run-vmblock\x2dfuse.mount                  | disabled  |
| sys-fs-fuse-connections.mount              | static    |
| sys-kernel-config.mount                    | static    |
| sys-kernel-debug.mount                     | static    |
| tmp.mount                                  | disabled  |
| systemd-ask-password-console.path          | static    |
| systemd-ask-password-plymouth.path         | static    |
| systemd-ask-password-wall.path             | static    |
| session-1.scope                            | transient |
| session-3.scope                            | transient |
| auditd.service                             | enabled   |
| autovt@.service                            | enabled   |
| blk-availability.service                   | disabled  |
| chrony-dnssrv@.service                     | static    |
| chrony-wait.service                        | disabled  |
| chronyd.service                            | enabled   |
| console-getty.service                      | disabled  |
| container-getty@.service                   | static    |
| cpupower.service                           | disabled  |
| crond.service                              | enabled   |
| dbus-org.fedoraproject.FirewallD1.service  | enabled   |
| dbus-org.freedesktop.hostname1.service     | static    |
| dbus-org.freedesktop.locale1.service       | static    |
| dbus-org.freedesktop.login1.service        | static    |
| dbus-org.freedesktop.nm-dispatcher.service | enabled   |
| dbus-org.freedesktop.portable1.service     | static    |
| dbus-org.freedesktop.timedate1.service     | enabled   |
| dbus.service                               | static    |
| debug-shell.service                        | disabled  |
| dm-event.service                           | static    |
| dnf-makecache.service                      | static    |
| dracut-cmdline.service                     | static    |
| dracut-initqueue.service                   | static    |
| dracut-mount.service                       | static    |
| dracut-pre-mount.service                   | static    |
| dracut-pre-pivot.service                   | static    |
| dracut-pre-trigger.service                 | static    |
| dracut-pre-udev.service                    | static    |
| dracut-shutdown.service                    | static    |
| ebtables.service                           | disabled  |
| emergency.service                          | static    |
| firewalld.service                          | enabled   |
| fstrim.service                             | static    |
| fwupd-offline-update.service               | static    |
| fwupd-refresh.service                      | static    |
| fwupd.service                              | static    |
| getty@.service                             | enabled   |
| grub-boot-indeterminate.service            | static    |
| halt-local.service                         | static    |
| import-state.service                       | enabled   |
| initrd-cleanup.service                     | static    |
| initrd-parse-etc.service                   | static    |
| initrd-switch-root.service                 | static    |
| initrd-udevadm-cleanup-db.service          | static    |
| iprdump.service                            | disabled  |
| iprinit.service                            | disabled  |
| iprupdate.service                          | disabled  |
| irqbalance.service                         | enabled   |
| kdump.service                              | enabled   |
| kmod-static-nodes.service                  | static    |
| kvm_stat.service                           | disabled  |
| ldconfig.service                           | static    |
| loadmodules.service                        | enabled   |
| lvm2-lvmpolld.service                      | static    |
| lvm2-monitor.service                       | enabled   |
| lvm2-pvscan@.service                       | static    |
| man-db-cache-update.service                | static    |
| mdadm-grow-continue@.service               | static    |
| mdadm-last-resort@.service                 | static    |
| mdcheck_continue.service                   | static    |
| mdcheck_start.service                      | static    |
| mdmon@.service                             | static    |
| mdmonitor-oneshot.service                  | static    |
| mdmonitor.service                          | enabled   |
| messagebus.service                         | static    |
| microcode.service                          | enabled   |
| NetworkManager-dispatcher.service          | enabled   |
| NetworkManager-wait-online.service         | enabled   |
| NetworkManager.service                     | enabled   |
| nftables.service                           | disabled  |
| nis-domainname.service                     | enabled   |
| plymouth-halt.service                      | static    |
| plymouth-kexec.service                     | static    |
| plymouth-poweroff.service                  | static    |
| plymouth-quit-wait.service                 | static    |
| plymouth-quit.service                      | static    |
| plymouth-read-write.service                | static    |
| plymouth-reboot.service                    | static    |
| plymouth-start.service                     | static    |
| plymouth-switch-root-initramfs.service     | static    |
| plymouth-switch-root.service               | static    |
| polkit.service                             | static    |
| quotaon.service                            | static    |
| rc-local.service                           | static    |
| rdisc.service                              | disabled  |
| rdma-load-modules@.service                 | static    |
| rdma-ndd.service                           | static    |
| rescue.service                             | static    |
| rhcd.service                               | disabled  |
| rhsm-facts.service                         | disabled  |
| rhsm.service                               | disabled  |
| rhsmcertd.service                          | enabled   |
| rsyslog.service                            | enabled   |
| selinux-autorelabel-mark.service           | enabled   |
| selinux-autorelabel.service                | static    |
| serial-getty@.service                      | disabled  |
| sshd-keygen@.service                       | disabled  |
| sshd.service                               | enabled   |
| sshd@.service                              | static    |
| sssd-autofs.service                        | indirect  |
| sssd-kcm.service                           | indirect  |
| sssd-nss.service                           | indirect  |
| sssd-pac.service                           | indirect  |
| sssd-pam.service                           | indirect  |
| sssd-ssh.service                           | indirect  |
| sssd-sudo.service                          | indirect  |
| sssd.service                               | enabled   |
| syslog.service                             | enabled   |
| system-update-cleanup.service              | static    |
| systemd-ask-password-console.service       | static    |
| systemd-ask-password-plymouth.service      | static    |
| systemd-ask-password-wall.service          | static    |
| systemd-backlight@.service                 | static    |
| systemd-binfmt.service                     | static    |
| systemd-coredump@.service                  | static    |
| systemd-exit.service                       | static    |
| systemd-firstboot.service                  | static    |
| systemd-fsck-root.service                  | static    |
| systemd-fsck@.service                      | static    |
| systemd-halt.service                       | static    |
| systemd-hibernate-resume@.service          | static    |
| systemd-hibernate.service                  | static    |
| systemd-hostnamed.service                  | static    |
| systemd-hwdb-update.service                | static    |
| systemd-hybrid-sleep.service               | static    |
| systemd-initctl.service                    | static    |
| systemd-journal-catalog-update.service     | static    |
| systemd-journal-flush.service              | static    |
| systemd-journald.service                   | static    |
| systemd-kexec.service                      | static    |
| systemd-localed.service                    | static    |
| systemd-logind.service                     | static    |
| systemd-machine-id-commit.service          | static    |
| systemd-modules-load.service               | static    |
| systemd-portabled.service                  | static    |
| systemd-poweroff.service                   | static    |
| systemd-quotacheck.service                 | static    |
| systemd-random-seed.service                | static    |
| systemd-reboot.service                     | static    |
| systemd-remount-fs.service                 | static    |
| systemd-resolved.service                   | disabled  |
| systemd-rfkill.service                     | static    |
| systemd-suspend-then-hibernate.service     | static    |
| systemd-suspend.service                    | static    |
| systemd-sysctl.service                     | static    |
| systemd-sysusers.service                   | static    |
| systemd-timedated.service                  | masked    |
| systemd-tmpfiles-clean.service             | static    |
| systemd-tmpfiles-setup-dev.service         | static    |
| systemd-tmpfiles-setup.service             | static    |
| systemd-udev-settle.service                | static    |
| systemd-udev-trigger.service               | static    |
| systemd-udevd.service                      | static    |
| systemd-update-done.service                | static    |
| systemd-update-utmp-runlevel.service       | static    |
| systemd-update-utmp.service                | static    |
| systemd-user-sessions.service              | static    |
| systemd-vconsole-setup.service             | static    |
| systemd-volatile-root.service              | static    |
| tcsd.service                               | disabled  |
| teamd@.service                             | static    |
| timedatex.service                          | enabled   |
| tuned.service                              | enabled   |
| udisks2.service                            | enabled   |
| unbound-anchor.service                     | static    |
| user-runtime-dir@.service                  | static    |
| user@.service                              | static    |
| vgauthd.service                            | enabled   |
| vmtoolsd.service                           | enabled   |
| user.slice                                 | static    |
| dbus.socket                                | static    |
| dm-event.socket                            | enabled   |
| lvm2-lvmpolld.socket                       | enabled   |
| sshd.socket                                | disabled  |
| sssd-autofs.socket                         | disabled  |
| sssd-kcm.socket                            | enabled   |
| sssd-nss.socket                            | disabled  |
| sssd-pac.socket                            | disabled  |
| sssd-pam-priv.socket                       | disabled  |
| sssd-pam.socket                            | disabled  |
| sssd-ssh.socket                            | disabled  |
| sssd-sudo.socket                           | disabled  |
| syslog.socket                              | static    |
| systemd-coredump.socket                    | static    |
| systemd-initctl.socket                     | static    |
| systemd-journald-audit.socket              | static    |
| systemd-journald-dev-log.socket            | static    |
| systemd-journald.socket                    | static    |
| systemd-rfkill.socket                      | static    |
| systemd-udevd-control.socket               | static    |
| systemd-udevd-kernel.socket                | static    |
| dev-mapper-rhel\x2dswap.swap               | generated |
| basic.target                               | static    |
| bluetooth.target                           | static    |
| boot-complete.target                       | static    |
| cryptsetup-pre.target                      | static    |
| cryptsetup.target                          | static    |
| ctrl-alt-del.target                        | disabled  |
| default.target                             | indirect  |
| emergency.target                           | static    |
| exit.target                                | disabled  |
| final.target                               | static    |
| getty-pre.target                           | static    |
| getty.target                               | static    |
| graphical.target                           | static    |
| halt.target                                | disabled  |
| hibernate.target                           | static    |
| hybrid-sleep.target                        | static    |
| initrd-fs.target                           | static    |
| initrd-root-device.target                  | static    |
| initrd-root-fs.target                      | static    |
| initrd-switch-root.target                  | static    |
| initrd.target                              | static    |
| iprutils.target                            | disabled  |
| kexec.target                               | disabled  |
| local-fs-pre.target                        | static    |
| local-fs.target                            | static    |
| multi-user.target                          | indirect  |
| network-online.target                      | static    |
| network-pre.target                         | static    |
| network.target                             | static    |
| nss-lookup.target                          | static    |
| nss-user-lookup.target                     | static    |
| paths.target                               | static    |
| poweroff.target                            | disabled  |
| printer.target                             | static    |
| rdma-hw.target                             | static    |
| reboot.target                              | disabled  |
| remote-cryptsetup.target                   | disabled  |
| remote-fs-pre.target                       | static    |
| remote-fs.target                           | enabled   |
| rescue.target                              | static    |
| rpcbind.target                             | static    |
| runlevel0.target                           | disabled  |
| runlevel1.target                           | static    |
| runlevel2.target                           | indirect  |
| runlevel3.target                           | indirect  |
| runlevel4.target                           | indirect  |
| runlevel5.target                           | static    |
| runlevel6.target                           | disabled  |
| selinux-autorelabel.target                 | static    |
| shutdown.target                            | static    |
| sigpwr.target                              | static    |
| sleep.target                               | static    |
| slices.target                              | static    |
| smartcard.target                           | static    |
| sockets.target                             | static    |
| sound.target                               | static    |
| sshd-keygen.target                         | static    |
| suspend-then-hibernate.target              | static    |
| suspend.target                             | static    |
| swap.target                                | static    |
| sysinit.target                             | static    |
| system-update-pre.target                   | static    |
| system-update.target                       | static    |
| time-sync.target                           | static    |
| timers.target                              | static    |
| umount.target                              | static    |
| chrony-dnssrv@.timer                       | disabled  |
| dnf-makecache.timer                        | enabled   |
| fstrim.timer                               | disabled  |
| fwupd-refresh.timer                        | disabled  |
| mdadm-last-resort@.timer                   | static    |
| mdcheck_continue.timer                     | disabled  |
| mdcheck_start.timer                        | disabled  |
| mdmonitor-oneshot.timer                    | disabled  |
| systemd-tmpfiles-clean.timer               | static    |
| unbound-anchor.timer                       | enabled   |
